2011-06-20  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: remove LayoutTestController::setTimelineProfilingEnabled.
        https://bugs.webkit.org/show_bug.cgi?id=62994

        * DumpRenderTree/LayoutTestController.cpp:
        (closeWebInspectorCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/chromium/DRTDevToolsAgent.cpp:
        * DumpRenderTree/chromium/DRTDevToolsAgent.h:
        * DumpRenderTree/chromium/LayoutTestController.cpp:
        (LayoutTestController::LayoutTestController):
        * DumpRenderTree/chromium/LayoutTestController.h:
        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        * DumpRenderTree/qt/LayoutTestControllerQt.h:
        * DumpRenderTree/win/LayoutTestControllerWin.cpp:
        * DumpRenderTree/wx/LayoutTestControllerWx.cpp:
        * WebKitTestRunner/InjectedBundle/Bindings/LayoutTestController.idl:
        * WebKitTestRunner/InjectedBundle/LayoutTestController.cpp:
        * WebKitTestRunner/InjectedBundle/LayoutTestController.h:

2011-06-20  Lukasz Slachciak  <l.slachciak@samsung.com>

        Reviewed by Martin Robinson.

        [GTK] General mechanism for adjusting WebKitWebSettings in GtkLauncher.
        https://bugs.webkit.org/show_bug.cgi?id=55308

        * GtkLauncher/main.c: Added general mechanism for adjusting WebKitWebSettings.
        (parseOptionEntryCallback): Callback for parsing option entry.
        (getOptionEntriesFromWebKitWebSettings): Basing on the WebKitWebSettings properties prepare
        list of option entries.
        (transformStringToBoolean): Transform function for boolean convertion used by parseOptionEntryCallback.
        (transformStringToInt): Transform function for int convertion used by parseOptionEntryCallback.