@@ -1,3 +1,10 @@
+2011-06-20  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Unreviewed. Fix WebKit2 GTK build after r89249.
+
+        * GtkLauncher/main.c:
+        (main):
+
 2011-06-20  Pavel Feldman  <pfeldman@chromium.org>
 
         Reviewed by Yury Semikhatsky.
